--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 
      	<div id="item">
 
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/jamie-street-Zqy-x7K5Qcg-unsplash.jpg" height="200px" width="auto">
+     		<img src="./jamie-street-Zqy-x7K5Qcg-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/sebastian-coman-travel-Jd3lPFcWouc-unsplash.jpg" height="200px" width="auto">
+     		<img src="./sebastian-coman-travel-Jd3lPFcWouc-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/olia-nayda-f6v_Q0WXEK8-unsplash.jpg" height="200px" width="auto">
+     		<img src="./olia-nayda-f6v_Q0WXEK8-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/anastasia-ulyanova-aFqfi1ASUJc-unsplash.jpg" height="200px" width="auto">
+     		<img src="./anastasia-ulyanova-aFqfi1ASUJc-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/alvan-nee-Am3RoG7GEl0-unsplash.jpg" height="200px" width="auto">
+     		<img src="./alvan-nee-Am3RoG7GEl0-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/alexandra-novitskaya-8K0vunxffaM-unsplash.jpg" height="200px" width="auto">
+     		<img src="./alexandra-novitskaya-8K0vunxffaM-unsplash.jpg" height="200px" width="auto">
      		
-     		<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/ruby-schmank-Oq9NDnlFQzU-unsplash.jpg" height="200px" width="auto">
+     		<img src="./ruby-schmank-Oq9NDnlFQzU-unsplash.jpg" height="200px" width="auto">
 
      	</div>
 
@@ -90,15 +90,15 @@
 
      		<div id="item">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/izabelle-acheson-MPNfbF4lpww-unsplash.jpg" height="200px" width="auto">
+     			<img src="./izabelle-acheson-MPNfbF4lpww-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/demorris-byrd-G21-GaAZrrs-unsplash.jpg" height="200px" width="auto">
+     			<img src="./demorris-byrd-G21-GaAZrrs-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/tran-mau-tri-tam--81lVsfM4gQ-unsplash.jpg" height="200px" width="auto">
+     			<img src="./tran-mau-tri-tam--81lVsfM4gQ-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/zoe-gayah-jonker-lm99jZLEvPQ-unsplash.jpg" height="200px" width="auto">
+     			<img src="./zoe-gayah-jonker-lm99jZLEvPQ-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/max-baskakov-OzAeZPNsLXk-unsplash.jpg" height="200px" width="auto">
+     			<img src="./max-baskakov-OzAeZPNsLXk-unsplash.jpg" height="200px" width="auto">
 
      		</div>
      	</div>
@@ -116,15 +116,15 @@
 
      		<div id="item">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/diana-macesanu-FoY0-gwa9N4-unsplash.jpg" height="200px" width="auto">
+     			<img src="./diana-macesanu-FoY0-gwa9N4-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/lucy-m-KNMbRhf5IT8-unsplash.jpg" height="200px" width="auto">
+     			<img src="./lucy-m-KNMbRhf5IT8-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/waranya-mooldee-Efj0HGPdPKs-unsplash.jpg" height="200px" width="auto">
+     			<img src="./waranya-mooldee-Efj0HGPdPKs-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/cameron-barnes-rd0FiIq8Tcs-unsplash.jpg" height="200px" width="auto">
+     			<img src="./cameron-barnes-rd0FiIq8Tcs-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/aswathy-n-srMHHWCTvcU-unsplash.jpg" height="200px" width="auto">
+     			<img src="./aswathy-n-srMHHWCTvcU-unsplash.jpg" height="200px" width="auto">
 
      		</div>
      	</div>
@@ -142,13 +142,13 @@
 
      		<div id="item">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/bonnie-kittle-MUcxe_wDurE-unsplash.jpg" height="200px" width="auto">
+     			<img src="./bonnie-kittle-MUcxe_wDurE-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/karlijn-prot-5hMlxeWjVCo-unsplash.jpg" height="200px" width="auto">
+     			<img src="./karlijn-prot-5hMlxeWjVCo-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/ricky-kharawala-adK3Vu70DEQ-unsplash.jpg" height="200px" width="auto">
+     			<img src="./ricky-kharawala-adK3Vu70DEQ-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/scott-webb-ttCFWHrmWH4-unsplash.jpg" height="200px" width="auto">
+     			<img src="./scott-webb-ttCFWHrmWH4-unsplash.jpg" height="200px" width="auto">
 
      		</div>
      	</div>
