--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<title>Home | The Pet Co.</title>
-     <link rel="icon" href="file:///Users/jaredmcdowall/Desktop/Personal/Coding/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald:wght@500&display=swap" rel="stylesheet"> 
 
