--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     
     <button class="button apply">
-          <!-- <a href="./apply.html"><h4>Apply Now</h4></a> -->
+          <a href=""><h4>Apply Now</h4></a>
 
      </button>
      
