--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
      	<footer>
 
-     		<h5>&copy; Jared McDowall 2020.</h5>
+     		<h5>&copy; Jared McDowall 2020 - 2021.</h5>
      		
      	</footer>
      </div>
