--- a/apply.html
+++ b/apply.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Apply | The Pet Co.</title>
-	 <link rel="icon" href="file:///Users/jaredmcdowall/Desktop/Personal/Coding/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="./resources/css/apply.css">
+	 <link rel="icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="./apply.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald:wght@500&display=swap" rel="stylesheet"> 
 </head>
 <body>
@@ -102,7 +102,7 @@
      <!-- Footer Section -->
 
  <footer>
- 	<h5>&copy; The Pet Co. 2020</h5>
+ 	<h5>&copy; Jared McDowall 2020 - 2021.</h5>
  	</footer>
 </body>
 </html>
