--- a/apply.html
+++ b/apply.html
@@ -12,7 +12,7 @@
 
  <header class="flex-container">
 
-   <a href="#mission"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs-media-cache-ak0.pinimg.com%2Foriginals%2F8e%2Fe3%2F33%2F8ee333af01911a01ae752edf07fc8b1f.png&f=1&nofb=1" height="59px" width="auto"></a>
+   <a href="#mission"><img src="./logo.png" height="59px" width="auto"></a>
 
     <a href="./index.html"><span><h1>The Pet Co.</h1></span></a>
 
