--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
      <div id="cat">
 
-     	<h3>Adopt A Cat Today!</h3>
+     	<h3>Adopt a Cat Today!</h3>
 
      	<h4>Need a lounging around buddy? Adopt a beautiful cat today!</h4>
 
