--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Apply | The Pet Co.</title>
 	 <link rel="icon" href="./favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="./apply.css">
+	<link rel="stylesheet" type="text/css" href="./Styles/apply.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald:wght@500&display=swap" rel="stylesheet"> 
 </head>
 <body>
