--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<title>Home | The Pet Co.</title>
      <link rel="icon" href="./favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="./styles.css">
+	<link rel="stylesheet" type="text/css" href="./Styles/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald:wght@500&display=swap" rel="stylesheet"> 
 
 </head>
