fixed the broken images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<title>Home | The Pet Co.</title>
-     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+     <link rel="icon" href="./Images/Logo/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="./Styles/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald:wght@500&display=swap" rel="stylesheet"> 
 
@@ -14,7 +14,7 @@
 
  <header class="flex-container">
 
-   <a href="#mission"><img src="./logo.png" height="59px" width="auto"></a>
+   <a href="#mission"><img src="./Images/Logo/logo.png" height="59px" width="auto"></a>
 
     <a href="#mission"><span><h1>The Pet Co.</h1></span></a>
 
@@ -59,19 +59,19 @@
 
      	<div id="item">
 
-     		<img src="./jamie-street-Zqy-x7K5Qcg-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/jamie-street-Zqy-x7K5Qcg-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="./sebastian-coman-travel-Jd3lPFcWouc-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/sebastian-coman-travel-Jd3lPFcWouc-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="./olia-nayda-f6v_Q0WXEK8-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/olia-nayda-f6v_Q0WXEK8-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="./anastasia-ulyanova-aFqfi1ASUJc-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/anastasia-ulyanova-aFqfi1ASUJc-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="./alvan-nee-Am3RoG7GEl0-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/alvan-nee-Am3RoG7GEl0-unsplash.jpg" height="200px" width="auto">
 
-     		<img src="./alexandra-novitskaya-8K0vunxffaM-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/alexandra-novitskaya-8K0vunxffaM-unsplash.jpg" height="200px" width="auto">
      		
-     		<img src="./ruby-schmank-Oq9NDnlFQzU-unsplash.jpg" height="200px" width="auto">
+     		<img src="./Images/Animals/ruby-schmank-Oq9NDnlFQzU-unsplash.jpg" height="200px" width="auto">
 
      	</div>
 
@@ -90,15 +90,15 @@
 
      		<div id="item">
 
-     			<img src="./izabelle-acheson-MPNfbF4lpww-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Aniamls/izabelle-acheson-MPNfbF4lpww-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./demorris-byrd-G21-GaAZrrs-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images//Animals/demorris-byrd-G21-GaAZrrs-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./tran-mau-tri-tam--81lVsfM4gQ-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/tran-mau-tri-tam--81lVsfM4gQ-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./zoe-gayah-jonker-lm99jZLEvPQ-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/zoe-gayah-jonker-lm99jZLEvPQ-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./max-baskakov-OzAeZPNsLXk-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/max-baskakov-OzAeZPNsLXk-unsplash.jpg" height="200px" width="auto">
 
      		</div>
      	</div>
@@ -116,15 +116,15 @@
 
      		<div id="item">
 
-     			<img src="./diana-macesanu-FoY0-gwa9N4-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/diana-macesanu-FoY0-gwa9N4-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./lucy-m-KNMbRhf5IT8-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/lucy-m-KNMbRhf5IT8-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./waranya-mooldee-Efj0HGPdPKs-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/waranya-mooldee-Efj0HGPdPKs-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./cameron-barnes-rd0FiIq8Tcs-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/cameron-barnes-rd0FiIq8Tcs-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./aswathy-n-srMHHWCTvcU-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/aswathy-n-srMHHWCTvcU-unsplash.jpg" height="200px" width="auto">
 
      		</div>
      	</div>
@@ -142,13 +142,13 @@
 
      		<div id="item">
 
-     			<img src="./bonnie-kittle-MUcxe_wDurE-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/bonnie-kittle-MUcxe_wDurE-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./karlijn-prot-5hMlxeWjVCo-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/karlijn-prot-5hMlxeWjVCo-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./ricky-kharawala-adK3Vu70DEQ-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/ricky-kharawala-adK3Vu70DEQ-unsplash.jpg" height="200px" width="auto">
 
-     			<img src="./scott-webb-ttCFWHrmWH4-unsplash.jpg" height="200px" width="auto">
+     			<img src="./Images/Animals/scott-webb-ttCFWHrmWH4-unsplash.jpg" height="200px" width="auto">
 
      		</div>
      	</div>
@@ -186,7 +186,7 @@
 
      	<footer>
 
-     		<h5>&copy; Jared McDowall 2020 - 2021.</h5>
+     		<h5>&copy; Jared McDowall 2020 - 2022.</h5>
      		
      	</footer>
      </div>
